Move optimizeLegibility to only apply to headline on wide browsers, as small screens can cause incorrect wrapping of this line in Chrome. Workaround for Chromium issue 189755.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@139 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/style/wp4.css
+++ b/wordpress.org/public_html/style/wp4.css
@@ -525,6 +525,10 @@ a img.aligncenter {
 		line-height: 34px;
 	}
 
+	#headline h2 {
+		text-rendering: optimizeLegibility;
+	}
+
 	#mobile-menu-button {
 		display: none;
 	}
@@ -1076,7 +1080,6 @@ input.text {
 	padding-top: 18px;
 	padding-left: 9px;
 	float: left;
-	text-rendering: optimizeLegibility;
 }
 
 #headline .login {
